recording version beta1

--- a/chrome/page_action.html
+++ b/chrome/page_action.html
@@ -12,10 +12,11 @@
             <button id="start-yes" data-i18n="Yes">Yes</button>
             <button id="cancel1" data-i18n="Cancel">Cancel</button>
         </p>
+        <p style="color: gray" data-i18n="autoSaveMsg"></p>
     </div>
 
     <div id="stop" style="display: none">
-        <p data-i18n="Recording___">Recording... <span id="duration"></span></p>
+        <p><span data-i18n="Recording___">Recording...</span> <span id="duration"></span></p>
         <div data-i18n="stopRecordingQuestion">Stop recording?</div>
         <p style="text-align: right">
             <button id="stop-yes" data-i18n="Stop">Stop</button>
